# halte

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
halte/: Cargo.toml
halte-swift/Halte/: ContentView.swift  HalteApp.swift
halte-swift/Halte.xcodeproj/: project.pbxproj
halte-swift/HalteTests/: HalteTests.swift
halte-swift/HalteUITests/: HalteUITests.swift  HalteUITestsLaunchTests.swift
halte/src/: lib.rs  main.rs
openov/: Cargo.toml
openov/src/: lib.rs  pass.rs  stop.rs  tp.rs
