[package]
name = "halte"
version = "0.1.0"
edition = "2021"

[dependencies]
openov = { path = "../openov" }
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0.96"
chrono = "0.4.24"
